; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_tedcaptionsdec.c_parse_int.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_tedcaptionsdec.c_parse_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @parse_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_int(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 0, i32* %8, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @skip_spaces(i32* %9, i32* %10)
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %12, align 4
  %14 = sub i32 %13, 48
  %15 = icmp ugt i32 %14, 9
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %17, i32* %4, align 4
  br label %37

18:                                               ; preds = %3
  br label %19

19:                                               ; preds = %24, %18
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @BETWEEN(i32 %21, i32 48, i8 signext 57)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %19
  %25 = load i32, i32* %8, align 4
  %26 = mul nsw i32 %25, 10
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 %28, 48
  %30 = add nsw i32 %26, %29
  store i32 %30, i32* %8, align 4
  %31 = load i32*, i32** %5, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @next_byte(i32* %31, i32* %32)
  br label %19

34:                                               ; preds = %19
  %35 = load i32, i32* %8, align 4
  %36 = load i32*, i32** %7, align 8
  store i32 %35, i32* %36, align 4
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %34, %16
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @skip_spaces(i32*, i32*) #1

declare dso_local i64 @BETWEEN(i32, i32, i8 signext) #1

declare dso_local i32 @next_byte(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
